--- a/stacks.dtx
+++ b/stacks.dtx
@@ -19,7 +19,7 @@
 %<package>\ProvidesPackage{stacks}
 %<package>  [2014/06/14 v0.1 Automatically include snippets from the Stacks project]
 %<package>\RequirePackage{download}
-%<package>\RequirePackage{keyval}
+%<package>\RequirePackage{xkeyval}
 %<package>\RequirePackage{xparse}
 %
 %
@@ -54,14 +54,33 @@
 % This macro fetches a tag. It can be passed options, right now using \verb|[proof]| (or just any non-empty string) will fetch the proof. This should be changed to a key(-value) based approach.
 %
 % \section{Implementation}
+% The key-value code
 %    \begin{macrocode}
+\makeatletter
+
+\newcommand\stacks@options@proof{false}
+\define@key{stacks}{proof}[true]{\renewcommand\stacks@options@proof{#1}}
+
+\makeatother
+%    \end{macrocode}
+% The \verb|\stacksinclude| command
+%    \begin{macrocode}
+\makeatletter
+
 \DeclareDocumentCommand\stacksinclude{om}{%
-  \IfNoValueTF{#1}{%
+  \IfNoValueF{#1}{\setkeys{stacks}{#1}}%
+
+  \ifnum\pdfstrcmp{\stacks@options@proof}{true}=0%
+    \download[#2-proof.tex]{http://stacks.math.columbia.edu/data/tag/#2/content/full/raw}%
+    \input{#2-proof}%
+  \else\ifnum\pdfstrcmp{\stacks@options@proof}{false}=0%
     \download[#2.tex]{http://stacks.math.columbia.edu/data/tag/#2/content/statement/raw}%
-  }{%
-    \download[#2.tex]{http://stacks.math.columbia.edu/data/tag/#2/content/full/raw}%
-  }
-  \input{#2}%
+    \input{#2}%
+  \else
+    provided a wrong argument
+  \fi\fi%
 }
+
+\makeatother
 %    \end{macrocode}
 \endinput
