Adds option to change the label of a tag
Currently you have to explicitly use the proof option to make this work.

--- a/stacks.dtx
+++ b/stacks.dtx
@@ -104,6 +104,15 @@
 %    \begin{macrocode}
 \newcommand\stacks@options@proof{false}
 \define@key{stacks}{proof}[true]{\renewcommand\stacks@options@proof{#1}}
+\newcommand\stacks@options@label{}
+\define@key{stacks}{label}{%
+  \renewcommand\stacks@options@label{#1}%
+  \let\oldlabel\label%
+  \renewcommand{\label}[1]{%
+    \oldlabel{\stacks@options@label}%
+    \let\label\oldlabel%
+  }%
+}
 
 \makeatother
 %    \end{macrocode}
