--- a/test.tex
+++ b/test.tex
@@ -26,5 +26,5 @@ Wrong value:
 \stacksinclude[proof=test]{01ZA}
 
 Custom label:
-\stacksinclude[proof,label=mycustomlabel]{01ZA}
+\stacksinclude[label=my-custom-label]{01ZA}
 \end{document}
