--- a/test.tex
+++ b/test.tex
@@ -27,4 +27,10 @@ Wrong value:
 
 Custom label:
 \stacksinclude[label=my-custom-label]{01ZA}
+
+Default prefix:
+\stacksinclude[prefix]{01ZA}
+
+Custom prefix:
+\stacksinclude[prefix=foo-]{01ZA}
 \end{document}
